--- a/FinalProject2/Base.lproj/Main.storyboard
+++ b/FinalProject2/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="bKD-uE-ISb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="0JZ-L8-P4o">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -12,7 +12,7 @@
         <!--My Events-->
         <scene sceneID="n2R-oZ-Jy4">
             <objects>
-                <viewController id="dGQ-e3-m7K" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MyEventsViewController" id="dGQ-e3-m7K" customClass="MyEventsViewController" customModule="FinalProject2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="APm-8S-CB0"/>
                         <viewControllerLayoutGuide type="bottom" id="eQJ-mF-z41"/>
@@ -40,18 +40,44 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="My Events" id="4fH-2q-d9Y">
-                        <barButtonItem key="leftBarButtonItem" title="Menu" id="ET4-gL-PRB"/>
+                        <barButtonItem key="leftBarButtonItem" image="menu" id="ET4-gL-PRB"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="uYe-V8-hLd"/>
                     </navigationItem>
+                    <connections>
+                        <outlet property="addBarButton" destination="uYe-V8-hLd" id="jK3-Ai-boS"/>
+                        <outlet property="menuBarButton" destination="ET4-gL-PRB" id="7ya-5r-Cfg"/>
+                        <outlet property="tableView" destination="6R9-I0-Dc0" id="bbF-SB-MLD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hNv-JL-zLK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1917.5999999999999" y="-1455.0224887556224"/>
         </scene>
-        <!--Title-->
+        <!--Add Event-->
+        <scene sceneID="0gp-FG-w1B">
+            <objects>
+                <viewController id="jye-I4-Aob" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iMI-rd-4wz"/>
+                        <viewControllerLayoutGuide type="bottom" id="rNe-BB-Czu"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="u7M-Rd-KcH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add Event" id="VGu-j2-7qR"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qqf-93-elm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2618" y="-1455"/>
+        </scene>
+        <!--Events View Controller-->
         <scene sceneID="cUD-xa-DW6">
             <objects>
-                <viewController id="9Q1-rr-fu4" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EventsViewController" id="9Q1-rr-fu4" customClass="EventsViewController" customModule="FinalProject2" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="nIH-MR-eSR"/>
                         <viewControllerLayoutGuide type="bottom" id="tj5-tg-FYA"/>
@@ -60,16 +86,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="79" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="I8E-BX-fUr">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="87" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="PNE-6H-M4M">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="79" id="EsP-eC-gRM">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="79"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="87" id="qiZ-NP-syx">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="87"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="EsP-eC-gRM" id="1Df-6R-pb4">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="78.5"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qiZ-NP-syx" id="OGB-qT-Si8">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="86.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -78,7 +104,29 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="kJx-9R-Jfp"/>
+                    <navigationItem key="navigationItem" id="kJx-9R-Jfp">
+                        <nil key="title"/>
+                        <view key="titleView" contentMode="scaleToFill" id="83m-hv-XQm">
+                            <rect key="frame" x="48.5" y="5.5" width="278" height="33"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="koW-Aw-HHH">
+                                    <rect key="frame" x="0.0" y="3" width="278" height="29"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <segments>
+                                        <segment title="Category1"/>
+                                        <segment title="Category2"/>
+                                        <segment title="Category3"/>
+                                    </segments>
+                                </segmentedControl>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="segmentedControl" destination="koW-Aw-HHH" id="f72-4T-0I6"/>
+                        <outlet property="tableView" destination="PNE-6H-M4M" id="7de-KK-aCT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xko-hz-QE1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -188,7 +236,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="85s-9C-lVL" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="623" y="139"/>
+            <point key="canvasLocation" x="1153" y="139"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="7Ry-q1-lWt">
@@ -252,7 +300,10 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n4A-4B-dvX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1454" y="139"/>
+            <point key="canvasLocation" x="1918" y="139"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="menu" width="24" height="24"/>
+    </resources>
 </document>
